--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -13,17 +13,15 @@
   }
 
   &:has(.burger-button--active) {
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
-    background-color: v.$menu-bg-color;
+    background-color: transparent;
     z-index: 20;
   }
 
   .logo-img {
-    position: relative;
     width: v.$logo-width-mob;
-    z-index: 20;
 
     @include u.desktop {
       width: v.$logo-width-desk;
